<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity"
    android:background="@color/water">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_BTN_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/transparent"
            app:backgroundTint="@color/water"
            app:icon="@drawable/ic_baseline_arrow_back_24"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome_LinLay_entire"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_TXT_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/welcome_title"
            android:textColor="@color/main_title_text"
            android:textSize="45sp"
            android:textStyle="bold"
            android:fontFamily="@font/lobster">
        </com.google.android.material.textview.MaterialTextView>

        <LinearLayout
            android:id="@+id/welcome_LinLay_signin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/welcome_EDT_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:hint="@string/welcome_name"
                android:importantForAutofill="no"
                android:inputType="textWebEditText"
                android:textColor="@color/blue_text"
                android:textColorHint="@color/blue_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="TextContrastCheck">
            </EditText>

            <EditText
                android:id="@+id/welcome_EDT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:hint="@string/welcome_email"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/blue_text"
                android:textColorHint="@color/blue_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="TextContrastCheck">
            </EditText>

            <EditText
                android:id="@+id/welcome_EDT_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:hint="@string/welcome_password"
                android:importantForAutofill="no"
                android:inputType="textWebPassword"
                android:textColor="@color/blue_text"
                android:textColorHint="@color/blue_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="TextContrastCheck"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/welcome_LinLay_finalAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/welcome_BTN_enterApp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                   android:layout_gravity="center"
                    android:backgroundTint="@color/sea"
                    android:text="@string/welcome_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="40dp"
                    android:fontFamily="@font/poppins"
                    android:visibility="invisible">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/welcome_BTN_registerApp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/sea"
                    android:text="@string/welcome_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins"
                    android:visibility="visible"
                    app:cornerRadius="40dp"
                    tools:ignore="TextContrastCheck"></com.google.android.material.button.MaterialButton>
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/welcome_BTN_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:backgroundTint="@color/sea"
                android:text="@string/welcome_forgot_password"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="40dp"
                android:fontFamily="@font/poppins"
                android:visibility="invisible">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>