...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/water"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/home_BTN_back"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                app:backgroundTint="@color/water"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:iconTint="@color/white"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/home_IMG_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                />
...
            android:layout_weight="0.8"
            android:background="@color/layout_back"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <Spinner
                android:id="@+id/home_SP_listOfBeaches"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2"
                tools:ignore="SpeakableTextPresentCheck">
            </Spinner>

...
