...
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/profile_IMG_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_user"/>
            </androidx.cardview.widget.CardView>

            <TextView
...
